<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--    <TextView-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="Dominic!"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintLeft_toLeftOf="parent"-->
    <!--        app:layout_constraintRight_toRightOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->

    <ImageView
        android:id="@+id/formBack"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background"
        android:contentDescription="@string/this_is_the_background_image_of_the_restaurant" />

    <ImageView
        android:id="@+id/formLogo"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/ic_logo1"
        android:contentDescription="@string/this_is_the_logo_of_the_restaurant"/>


    <ImageView
        android:id="@+id/LowBar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignTop="@+id/scanBtn"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginTop="55dp"
        android:contentDescription="@string/this_is_the_bar_with_the_circle_where_the_scan_button_will_be"
        android:scaleY="2"
        android:src="@drawable/low_bar" />

    <Button
        android:id="@+id/scanBtn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="66dp"
        android:background="@drawable/roundbutton"
        android:contentDescription="@string/this_is_the_temporary_scan_button"
        android:text="" />

    <ImageView
        android:id="@+id/backgroundBtn"
        android:layout_width="49dp"
        android:layout_height="49dp"
        android:layout_alignStart="@+id/scanBtn"
        android:layout_alignTop="@+id/scanBtn"
        android:layout_alignEnd="@+id/scanBtn"
        android:layout_alignBottom="@+id/scanBtn"
        android:layout_marginStart="-5dp"
        android:layout_marginTop="-5dp"
        android:layout_marginEnd="-5dp"
        android:layout_marginBottom="-5dp"
        android:src="@drawable/scanbutton"
        android:contentDescription="@string/image_for_the_scan_btn" />

</RelativeLayout>